# component-oauth-card

./: Cargo.toml  Makefile  README.md  build.rs  component.manifest.json  component.manifest.template.json
.codex/: repo_overview.md
.i18n/: translator-state.json
assets/i18n/: ar-AE.json  ar-DZ.json  ar-EG.json  ar-IQ.json  ar-MA.json  ar-SA.json  ar-SD.json  ar-SY.json  ar-TN.json  ar.json  ay.json  bg.json  bn.json  cs.json  da.json  de.json  el.json  en-GB.json  en.json  es.json  et.json  fa.json  fi.json  fr-FR.json  fr.json  gn.json  gu.json  hi.json  hr.json  ht.json  hu.json  id.json  it.json  ja.json  km.json  kn.json  ko.json  lo.json  lt.json  lv.json  (+28 more)
flows/: custom.ygtc  default.ygtc
schemas/: component.schema.json
src/: broker.rs  i18n.rs  i18n_bundle.rs  lib.rs  logic.rs  model.rs  qa.rs  schema.rs
tests/: conformance.rs
tools/: i18n.sh
